fixed spacing on stuff

--- a/CSS/index.scss
+++ b/CSS/index.scss
@@ -28,6 +28,7 @@ header {
   border-bottom: 5px solid white;
   background-image: url("../IMAGES./background_1.jpg");
   width: 100%;
+  padding-top: 1vw;
 }
 
 nav {
